@@ -2,6 +2,9 @@
 
 	* Add configure option --enable-hfst.
 	* Increase version numbers for 2.3.
+	* Read morphology backend name from voikko-fi_FI.pro.
+	  Default is "malaga" so dictionary format version does not
+	  need to be changed to be able to use experimental backends.
 
 2009-10-30 Harri Pitkänen <hatapitk@iki.fi>
 
